--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(popupLocalImage)
 export(rotateImage)
 import(shiny)
 import(shinyUtils)
+importFrom(DT,dataTableOutput)
+importFrom(DT,renderDataTable)
 importFrom(exif,read_exif)
 importFrom(grDevices,rainbow)
 importFrom(imager,imrotate)
@@ -19,4 +21,7 @@ importFrom(jpeg,writeJPEG)
 importFrom(leaflet,addCircleMarkers)
 importFrom(leaflet,addTiles)
 importFrom(leaflet,leaflet)
+importFrom(leaflet,leafletOutput)
+importFrom(leaflet,renderLeaflet)
 importFrom(rgdal,GDALinfo)
+importFrom(shinydashboard,box)
