--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R: person("Christian", "Homberg", email = "christianhomberg@gmail.com", 
 Description: "The PhotoMapper application plots uploaded images on a map based on EXIF location and time information. 
       Images without the required tags will be excluded."
 Depends: R (>= 3.3.2), shiny, shinyUtils
-Imports: imager, jpeg, leaflet, ggmap, htmlwidgets, exif, rgdal
+Imports: imager, jpeg, leaflet, ggmap, htmlwidgets, exif, rgdal, DT, shinydashboard
 License: GPL-3
 LazyData: true
 Suggests: testthat
