--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(imputeExif)
 export(launch_application)
 export(popupLocalImage)
 export(rotateImage)
+export(substrRight)
 import(shiny)
 import(shinyUtils)
 importFrom(DT,dataTableOutput)
