--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(getJpgFiles)
 export(imageDirectory)
 export(imputeExif)
 export(launch_application)
+export(popupLocalImage)
 export(rotateImage)
 export(substrRight)
 import(shiny)
