- photoswipe integration (replaces popup image)  - fullscreen map by default

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ export(cleanUp)
 export(getJpgFiles)
 export(imageDirectory)
 export(imputeExif)
+export(insertPhotoswipe)
 export(launch_application)
+export(normalizeImage)
 export(popupLocalImage)
 export(rotateImage)
 export(substrRight)
