--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: The PhotoMapper application plots uploaded images on a map based on EXIF 
 Version: 0.2.2.84658
 Authors@R: person("Christian", "Homberg", email = "christianhomberg@gmail.com", role = c("aut", "cre"))
 Description: The PhotoMapper application plots uploaded images on a map based on EXIF location and time information.
-Depends: R (>= 3.3.2), shiny, shinyUtils
+Depends: R (>= 3.3.2), shiny, shinyUtils, magrittr
 Imports: imager, jpeg, leaflet, ggmap, htmlwidgets, exif, rgdal, DT, shinydashboard
 License: GPL-3
 LazyData: true
