- update changelog  - use magrittr  - hide photoswipe until used  - display world as placeholder  - display language instead of country in countryselect (german and english only)  - use min versions of countryselect

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(normalizeImage)
 export(popupLocalImage)
 export(rotateImage)
 export(substrRight)
+import(magrittr)
 import(shiny)
 import(shinyUtils)
 importFrom(DT,dataTableOutput)
