--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,11 @@ export(normalizeImage)
 export(popupLocalImage)
 export(rotateImage)
 export(substrRight)
+import(data.table)
 import(magrittr)
 import(shiny)
 import(shinyUtils)
+import(tidyr)
 importFrom(DT,dataTableOutput)
 importFrom(DT,renderDataTable)
 importFrom(exif,read_exif)
@@ -27,5 +29,4 @@ importFrom(leaflet,addTiles)
 importFrom(leaflet,leaflet)
 importFrom(leaflet,leafletOutput)
 importFrom(leaflet,renderLeaflet)
-importFrom(rgdal,GDALinfo)
 importFrom(shinydashboard,box)
