--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ importFrom(grDevices,rainbow)
 importFrom(imager,imrotate)
 importFrom(imager,load.image)
 importFrom(imager,save.image)
+importFrom(imputeTS,na.interpolation)
 importFrom(jpeg,readJPEG)
 importFrom(jpeg,writeJPEG)
 importFrom(leaflet,addCircleMarkers)
@@ -30,3 +31,6 @@ importFrom(leaflet,leaflet)
 importFrom(leaflet,leafletOutput)
 importFrom(leaflet,renderLeaflet)
 importFrom(shinydashboard,box)
+importFrom(shinyjs,delay)
+importFrom(shinyjs,runjs)
+importFrom(shinyjs,useShinyjs)
